--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-VITE_API_BASE_URL=https://cashtex.de/backend/api
-# VITE_API_BASE_URL=https://file-service-portal.com/backend/api
-# VITE_ENV=development
+VITE_API_BASE_URL=https://demoupdates.com/sonnenhof/backend/api/v1
+VITE_ENV=development
 # IMAGE_BASE_URL = https://file-service-portal.com/backend/storage/app/public/
 # VITE_PUBLIC_URL = https://file-service-portal.com/backend/public/storage/
 # VITE_BASE_URL= https://file-service-portal.com
