--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://cashtex.de/backend/api
+VITE_API_BASE_URL=https://demoupdates.com/sonnenhof/backend/api/v1
 VITE_ENV=production
